--- a/Register/style.css
+++ b/Register/style.css
@@ -62,6 +62,38 @@ a:hover {
 .topnav .icon {
   display: none;
 }
+
+
+.topnav1 {
+  overflow: hidden;
+  background-color: #f5f5f5;
+  height: 40px;
+  z-index: 8;
+}
+
+.topnav1 a {
+  float: left;
+  display: block;
+  color: #333;
+  text-align: center;
+  padding: 12px 14px;
+  text-decoration: none;
+  letter-spacing: 0.5px;
+  font-weight: 300;
+  text-shadow: 0 0 1px rgba(255,255,255,0.3);
+  font-size: 12.5px;
+  outline: none;
+  font-size-adjust: 0.58;
+
+}
+
+.topnav1 a:hover {
+  outline: none;
+}
+
+.topnav1 .icon {
+  display: none;
+}
 .navbar-header{
     height: 40px;
 }
@@ -76,21 +108,21 @@ a:hover {
   position: relative;
 }
 @media screen and (max-width: 600px) {
-  .topnav a:not(:first-child) {display: none;}
-  .topnav a.icon {
+  .topnav1 a:not(:first-child) {display: none;}
+  .topnav1 a.icon {
     float: right;
     display: block;
   }
 }
 
 @media screen and (max-width: 600px) {
-  .topnav.responsive {position: relative;}
-  .topnav.responsive .icon {
+  .topnav1.responsive {position: relative;}
+  .topnav1.responsive .icon {
     position: absolute;
     right: 0;
     top: 0;
   }
-  .topnav.responsive a {
+  .topnav1.responsive a {
     float: none;
     display: block;
     text-align: left;
@@ -206,7 +238,7 @@ a:hover {
     float: right;
    
     border-radius: 8px;
-        color: #333;
+    color: #333;
 
     
     letter-spacing: 1px;
@@ -243,7 +275,7 @@ a:hover {
     animation-timing-function: ease-out;
 }
 
-@-webkit-keyframes mymove { 
+@-webkit-keyframes mymove {
     from {left: -950px;}
     to {left: 0px;}
 }
@@ -319,7 +351,7 @@ a:hover {
  
 }
 
-.body .foot {
+.foot {
     height: 5%;
     width: 100%;
     top:95%;
@@ -523,4 +555,189 @@ ul.social-icons {
    from {opacity:  0;}
     to {opacity: 1;}
 
+}
+
+.form1 {
+    top:40px; position: relative; float: right; display: inline-block; width: 30%; right: 150px;
+}
+
+.button2 {
+    background-color: #9f1910; /* Green */
+    border: none;
+    
+    padding: 5px 8px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 13px;
+    
+    
+    position: relative;
+   -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+    cursor: pointer;
+    float: right;
+   
+    border-radius: 8px;
+    color: #f5f5f5;
+    border: 1px solid #9f1910;
+    
+    letter-spacing: 1px;
+    font-weight: 400;
+    text-shadow: 0 0 1px rgba(255,255,255,0.3);
+    
+}
+
+.button2:hover {
+    color: #9f1910;
+    background-color: transparent;
+    border: 1px solid #9f1910;
+
+}
+
+.button4 {
+    background-color: #9f1910; /* Green */
+    border: none;
+    
+    padding: 5px 8px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 13px;
+    
+    
+    position: relative;
+   -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+    cursor: pointer;
+    float: right;
+   
+    border-radius: 8px;
+    color: #f5f5f5;
+    border: 1px solid #9f1910;
+    
+    letter-spacing: 1px;
+    font-weight: 400;
+    text-shadow: 0 0 1px rgba(255,255,255,0.3);
+    
+}
+
+.button4:hover {
+    color: #9f1910;
+    background-color: transparent;
+    border: 1px solid #9f1910;
+
+}
+
+.button5 {
+    background-color: #9f1910; /* Green */
+    border: none;
+    
+    padding: 5px 8px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 13px;
+    
+    
+    position: relative;
+   -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+    cursor: pointer;
+    float: right;
+   
+    border-radius: 8px;
+    color: #f5f5f5;
+    border: 1px solid #9f1910;
+    
+    letter-spacing: 1px;
+    font-weight: 400;
+    text-shadow: 0 0 1px rgba(255,255,255,0.3);
+    
+}
+
+.button5:hover {
+    color: #9f1910;
+    background-color: transparent;
+    border: 1px solid #9f1910;
+
+}
+.form2 {
+    top:120px; position: relative;  display: block; width: 35%;
+    margin: 0 auto;
+    }
+
+.form3 {
+    top:50px; position: relative;  display: block; width: 100%;
+    margin: 0 auto;
+    }
+
+    .form4 {
+     position: relative;  display: inline-block; width: 35%;
+    margin: 0 20px;
+    }
+
+    .form5 {
+     position: relative;  display: inline-block; float: left; width: 50%;
+    margin: 0 20px;
+    }
+@media screen and (max-width: 600px) {
+    .form1 {
+        width: 98%;
+        top:60px; position: relative;
+        margin: 0 -150px;
+        float: right;
+        display: block; 
+    }
+
+    .form2 {
+        width: 98%;
+        margin: 0 auto;
+    }
+    .form4 {
+        width: 98%;
+        margin: 0 auto;
+    }
+
+     .form5 {
+        width: 98%;
+        margin: 0 auto;
+    }
+    .foot {
+        position: relative;
+        top: 100%;
+    }
+
+    .social-footer {
+        margin: 0;
+    }
+
+    .footer-social-icons {
+        display: inline;
+        position: fixed;
+        height: 30px;
+        bottom: 0;
+    }
+
+    .button4 {
+        display: none;
+    }
+
+   }
+
+
+@media screen and (min-width: 0px) and (max-width: 600px) {
+  #creative { display: none; }  /* hide it on small screens */
+  .topnav {display: none;}
+}
+
+@media screen and (min-width: 600px) and (max-width: 1280px) {
+  .topnav1 { display: none; }  /* hide it on small screens */
+ 
+}
+
+@media screen and (min-width: 600px){
+     #button5 {
+    display: none;
+  }
 }
