--- a/css/style.css
+++ b/css/style.css
@@ -627,3 +627,12 @@ ul.social-icons {
   }
 }
 
+@media screen and  (max-width: 360px) {
+    .colum2 .carousel-caption .slidebutton1  {
+    padding: 2px 8px;
+    font-size: 11px;
+    top:50;
+
+
+}
+}
