--- a/Register/style.css
+++ b/Register/style.css
@@ -662,6 +662,13 @@ ul.social-icons {
     border: 1px solid #9f1910;
 
 }
+
+.title {
+  top:60px;
+}
+.title1 {
+  top:100px;
+}
 .form2 {
     top:120px; position: relative;  display: block; width: 35%;
     margin: 0 auto;
@@ -684,16 +691,24 @@ ul.social-icons {
 @media screen and (max-width: 600px) {
     .form1 {
         width: 98%;
-        top:60px; position: relative;
+        top:10px; position: relative;
         margin: 0 -150px;
         float: right;
         display: block; 
     }
 
+    .title {
+      top:0px;
+    }
+    .title1{
+      top:10px;
+    }
     .form2 {
         width: 98%;
         margin: 0 auto;
-    }
+        top:30px;
+        position: relative;
+            }
     .form4 {
         width: 98%;
         margin: 0 auto;
@@ -704,8 +719,9 @@ ul.social-icons {
         margin: 0 auto;
     }
     .foot {
-        position: relative;
-        top: 100%;
+        position: fixed;
+        bottom: 0;
+        z-index: 80;
     }
 
     .social-footer {
@@ -719,6 +735,10 @@ ul.social-icons {
         bottom: 0;
     }
 
+    ul.social-icons {
+    margin-top: 0px;
+}
+
     .button4 {
         display: none;
     }
@@ -731,13 +751,157 @@ ul.social-icons {
   .topnav {display: none;}
 }
 
-@media screen and (min-width: 600px) and (max-width: 1280px) {
-  .topnav1 { display: none; }  /* hide it on small screens */
- 
-}
+
 
 @media screen and (min-width: 600px){
      #button5 {
     display: none;
   }
+}
+
+
+@media screen and (min-width: 0px) and (max-width: 600px) {
+  #creative { display: none; }  /* hide it on small screens */
+  #myTopnav { display: none; } 
+  .colum1    {display: none;}
+ .body .conten  .colum2 {
+    width: 100%;
+    float: none;
+    box-shadow: 
+        inset 0px 100px 15px 20px #333,
+        inset 0px -100px 15px 20px #333; 
+    margin-top:-30px;
+    height: 100%;
+  }
+
+  .carousel-inner {
+    width: 100%;
+    height: 100%;
+  }
+ 
+   .foot {
+        position: fixed;
+       
+        bottom: 0;
+    }
+.body .conten .colum2 .carousel-indicators {
+    margin-bottom: 80px;    
+}
+.carousel-caption{
+    margin-top: 0px;
+}
+
+.item {
+    height: 75%;
+}
+.register {
+    float: right;
+    margin: auto;
+    margin-right: 25px;
+    padding: 3px;
+    
+    
+}
+
+.register:hover {
+    background-color:   #9f1910;
+    color: #cccccc;
+}
+
+}
+
+@media screen and (min-width: 600px) and (max-width: 1280px) {
+   /* hide it on small screens */
+  #mobilenav {display: none;}
+  .register {
+    display: none;
+  }
+}
+
+
+.mySpan1{
+  border-radius: 5px;
+  display: block;
+  font-size: .9em;
+  text-align: center;
+  position: absolute;
+  background: #2F558E;
+  left: 104%;
+  top: -7px;
+  width: 160px;
+  padding: 7px 10px;
+  color: #fff;
+}
+
+.mySpan1:after {
+  right: 100%;
+  top: 50%;
+  border: solid transparent;
+  content: " ";
+  height: 0;
+  width: 0;
+  position: absolute;
+  pointer-events: none;
+  border-color: rgba(136, 183, 213, 0);
+  border-right-color: #2F558E;
+  border-width: 8px;
+  margin-top: -8px;
+}
+
+.mySpan2{
+  border-radius: 5px;
+  display: block;
+  font-size: .9em;
+  text-align: center;
+  position: absolute;
+  background: #2F558E;
+  left: 104%;
+  top: 0px;
+  width: 160px;
+  padding: 7px 10px;
+  color: #fff;
+}
+
+.mySpan2:after {
+  right: 100%;
+  top: 50%;
+  border: solid transparent;
+  content: " ";
+  height: 0;
+  width: 0;
+  position: absolute;
+  pointer-events: none;
+  border-color: rgba(136, 183, 213, 0);
+  border-right-color: #2F558E;
+  border-width: 8px;
+  margin-top: -8px;
+}
+
+.contact{
+ border-radius: 5px;
+  display: block;
+  font-size: .9em;
+  text-align: center;
+  position: absolute;
+  background: #2F558E;
+  left: 104%;
+  top: 0px;
+  width: 160px;
+  padding: 7px 10px;
+  color: #fff;
+}
+
+.contact:after {
+  right: 100%;
+  top: 50%;
+  border: solid transparent;
+  content: " ";
+  height: 0;
+  width: 0;
+  position: absolute;
+  pointer-events: none;
+  border-color: rgba(136, 183, 213, 0);
+  border-right-color: #2F558E;
+  border-width: 8px;
+  margin-top: -8px;
 }
