Final Registration Portal

--- a/css/style.css
+++ b/css/style.css
@@ -631,7 +631,7 @@ ul.social-icons {
     .colum2 .carousel-caption .slidebutton1  {
     padding: 2px 8px;
     font-size: 11px;
-    top:50;
+    top:2     0;
 
 
 }
