--- a/Register/style.css
+++ b/Register/style.css
@@ -193,12 +193,12 @@ a:hover {
 
 @-webkit-keyframes slideIn {
     0% {margin-top: -120px; }
-    100% {margin-top: 0px; }
+    100% {top: 0px; }
 }
 
 @keyframes slideIn {
     0% {margin-top: -120px; }
-    100% {margin-top: 0px; }
+    100% {top: 0px; }
 }
 
 
