--- a/Events/css/style.css
+++ b/Events/css/style.css
@@ -186,6 +186,7 @@ a:hover {
     margin-right: 145px;
     bottom: 4px;
     position: relative;
+
 }
 
 .button {
@@ -268,7 +269,7 @@ a:hover {
     to {opacity: 1;}
 }
 
-@keyframes fadeIn {
+@keyframes fadeIn {f
    from {opacity:  0;}
     to {opacity: 1;}
 }
@@ -298,21 +299,21 @@ a:hover {
 
 .body .conten {
     width: 100%;
-    height: 100%;
-    top: 0%;
+ 
 
 }
 
 .body .conten .colum1 {
     width: 73%;
     float: left;
-
+    height: 90%;
 
 }
 
 .body .conten .colum2 {
     width: 27%;
     float: left;
+    height: 90%;
     box-shadow: 
         inset 0px 100px 15px 20px #333,
         inset 0px -100px 15px 20px #333; 
@@ -476,9 +477,7 @@ ul.social-icons {
     to {right: 0px;}
 }
 
-.colum2 .carousel-caption {
-    margin-bottom: 80px;
-}
+
 .colum2 .carousel-caption .slidebutton1 a {
      color: #f5f5f5;
     font-size: 13px;
@@ -532,7 +531,7 @@ ul.social-icons {
 }
 
 
-@media screen and (min-width: 500px) and (max-width: 640px) {
+@media screen and (min-width: 0px) and (max-width: 600px) {
   #creative { display: none; }  /* hide it on small screens */
   #myTopnav { display: none; } 
   .colum1    {display: none;}
@@ -544,14 +543,7 @@ ul.social-icons {
         inset 0px -100px 15px 20px #333; 
     margin-top:-30px;
     height: 100%;
-    
   }
-
-  .colum2 .carousel-caption {
-    margin-bottom: 0px;
-   
-    bottom: 0px;
-}
 
   .carousel-inner {
     width: 100%;
@@ -566,12 +558,13 @@ ul.social-icons {
 .body .conten .colum2 .carousel-indicators {
     margin-bottom: 80px;    
 }
-
+.carousel-caption{
+    margin-top: 0px;
+}
 .colum2 .carousel-caption .slidebutton1  {
     padding: 2px 8px;
     font-size: 11px;
-    margin-top: 50px;
- 
+    margin-bottom: 5px;
     
 
 }
@@ -581,19 +574,6 @@ ul.social-icons {
     font-size: 11px;
 
 }
-.colum2 .carousel-caption .slidebutton1:hover {
-     color: #7A5128;
-    font-size: 11px;
-    background-color: rgba(173,132,91,0.7);
-    border: 1px solid #7A5128;
-}
-
-.colum2 .carousel-caption .slidebutton1:hover a {
-     color: #482626;
-    font-size: 11px;
-    
-}
-
 .item1 {
     height: 97%;
     background-image: url('../img/portal.png'); 
@@ -624,7 +604,19 @@ ul.social-icons {
 .images{
    display: none;
 }
+.register {
+    float: right;
+    margin: auto;
+    margin-right: 25px;
+    padding: 3px;
+    
+    
+}
 
+.register:hover {
+    background-color:   #9f1910;
+    color: #cccccc;
+}
 
 }
 
@@ -636,195 +628,12 @@ ul.social-icons {
   }
 }
 
-@media screen and (min-width: 320px) and (max-width: 480px) {
-   #creative { display: none; }  /* hide it on small screens */
-  #myTopnav { display: none; } 
-  .colum1    {display: none;}
- .body .conten  .colum2 {
-    width: 100%;
-    float: none;
-    box-shadow: 
-        inset 0px 100px 15px 20px #333,
-        inset 0px -100px 15px 20px #333; 
-    margin-top:-30px;
-    height: 100%;
-    
-  }
-
-  .colum2 .carousel-caption {
-    margin-bottom: 0px;
-   
-    bottom: 25px;
-}
-
-  .carousel-inner {
-    width: 100%;
-    height: 100%;
-  }
- 
-   .foot {
-        position: fixed;
-       
-        bottom: 0;
-    }
-.body .conten .colum2 .carousel-indicators {
-    margin-bottom: 80px;    
-}
-.carousel-caption{
-    margin-top: 0px;
-}
-.colum2 .carousel-caption .slidebutton1  {
+@media screen and  (max-width: 360px) {
+    .colum2 .carousel-caption .slidebutton1  {
     padding: 2px 8px;
     font-size: 11px;
-    margin-top: 20px;
- 
-    
-
-}
-
-.colum2 .carousel-caption .slidebutton1 a {
-    padding: 2px;
-    font-size: 11px;
-
-}
-.colum2 .carousel-caption .slidebutton1:hover {
-     color: #7A5128;
-    font-size: 11px;
-    background-color: rgba(173,132,91,0.7);
-    border: 1px solid #7A5128;
-}
-
-.colum2 .carousel-caption .slidebutton1:hover a {
-     color: #482626;
-    font-size: 11px;
-    
-}
-
-.item1 {
-    height: 90%;
-    background-image: url('../img/portal.png'); 
-    background-position: center; 
-    background-repeat: no-repeat; 
-    background-attachment: fixed; 
-    background-size: 100%;
-}
-
-.item2 {
-    height: 90%;
-    background-image: url('../img/CA1.png'); 
-    background-position: center; 
-    background-repeat: no-repeat; 
-    background-attachment: fixed; 
-    background-size: 100%;
-}
-
-.item3 {
-    height: 90%;
-    background-image: url('../img/lookback1.png'); 
-    background-position: center; 
-    background-repeat: no-repeat; 
-    background-attachment: fixed; 
-    background-size: 100%;
-}
-
-.images{
-   display: none;
-}
-}
+    top:2     0;
 
 
-@media screen and (max-width: 296px)  {
-   #creative { display: none; }  /* hide it on small screens */
-  #myTopnav { display: none; } 
-  .colum1    {display: none;}
- .body .conten  .colum2 {
-    width: 100%;
-    float: none;
-    box-shadow: 
-        inset 0px 100px 15px 20px #333,
-        inset 0px -100px 15px 20px #333; 
-    margin-top:-30px;
-    height: 100%;
-    
-  }
-
-  .colum2 .carousel-caption {
-    margin-bottom: 0px;
-   
-    bottom: 35px;
-}
-
-  .carousel-inner {
-    width: 100%;
-    height: 100%;
-  }
- 
-   .foot {
-        position: fixed;
-       
-        bottom: 0;
-    }
-.body .conten .colum2 .carousel-indicators {
-    margin-bottom: 80px;    
-}
-.carousel-caption{
-    margin-top: 0px;
-}
-.colum2 .carousel-caption .slidebutton1  {
-    padding: 2px 8px;
-    font-size: 10px;
-    margin-top: 20px;
- 
-    
-
-}
-
-.colum2 .carousel-caption .slidebutton1 a {
-    padding: 2px;
-    font-size: 10px;
-
-}
-.colum2 .carousel-caption .slidebutton1:hover {
-     color: #7A5128;
-    font-size: 10px;
-    background-color: rgba(173,132,91,0.7);
-    border: 1px solid #7A5128;
-}
-
-.colum2 .carousel-caption .slidebutton1:hover a {
-     color: #482626;
-    font-size: 10px;
-    
-}
-
-.item1 {
-    height: 90%;
-    background-image: url('../img/portal.png'); 
-    background-position: center; 
-    background-repeat: no-repeat; 
-    background-attachment: fixed; 
-    background-size: 100%;
-}
-
-.item2 {
-    height: 90%;
-    background-image: url('../img/CA1.png'); 
-    background-position: center; 
-    background-repeat: no-repeat; 
-    background-attachment: fixed; 
-    background-size: 100%;
-}
-
-.item3 {
-    height: 90%;
-    background-image: url('../img/lookback1.png'); 
-    background-position: center; 
-    background-repeat: no-repeat; 
-    background-attachment: fixed; 
-    background-size: 100%;
-}
-
-.images{
-   display: none;
 }
 }
